--- a/css/expo.css
+++ b/css/expo.css
@@ -3,7 +3,7 @@ nav{
 }
 #expomain{
     margin-top: 200px;
-    width:1200px;
+    width:940px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -108,7 +108,7 @@ nav{
     text-align: center;
     margin:10px 0px 60px 0px;
 }
-.expo_choice{
+.expo_choice1,.expo_choice2{
     width: 300px;
     height: 300px;
     overflow: hidden;
@@ -157,7 +157,7 @@ nav{
     transform: translate(-50%,-50%);
     text-align: center;
 }
-.expo_choice:hover .expo_over,.expo_choice:focus .expo_over,.expo_choice:active .expo_over{
+.expo_choice1:hover .expo_over,.expo_choice1:focus .expo_over,.expo_choice1:active .expo_over,.expo_choice2:hover .expo_over,.expo_choice2:focus .expo_over,.expo_choice2:active .expo_over{
     background-color: rgba(251,118,96,0.4);
 }
 .mySlides,.mySlides2 {display:none}
@@ -262,12 +262,10 @@ nav{
 }
 
 /* On smaller screens, decrease text size */
-@media only screen and (max-width: 1200px){
-    #expomain{
-    width:100%;
-}
-}
 @media only screen and (max-width: 1000px){
+    #expomain{
+    width: 100%;
+}
     .nav_page{
         width: 100%;
         height: 100vh;
@@ -310,6 +308,8 @@ nav{
 }
     .expo_holde{
     width:420px;
+        justify-content: center;
+        -webkit-justify-content: center;
 }
     .expo_holda{
     width:100%;
@@ -320,10 +320,13 @@ nav{
         flex-direction: column;
         -webkit-flex-direction:column;
     }
-    .expo_choice{
+    .expo_choice1{
     width: 200px;
     height: 200px;
-}
+}   
+    .expo_choice2{
+        display: none;
+    }
 .expo_choimg{
     width: 200px;
     height: 200px;
@@ -341,7 +344,7 @@ nav{
         justify-content: center;
         -webkit-justify-content: center;
 }
-    .expo_choice{
+    .expo_choice1{
     margin: 0px 10px 0px 10px;
 }
     .expo_btxta{
@@ -381,11 +384,7 @@ nav{
         height: 10px;
         width: 10px;
     }
-    .expo_holde{
-        justify-content: space-between;
-        -webkit-justify-content: space-between;
-}
-    .expo_choice{
+    .expo_choice1{
         margin: 0px 0px 0px 0px;
     width: 160px;
     height: 160px;
@@ -406,9 +405,13 @@ nav{
     .expo_datediagr{
     margin-top: 60px;
 }
+    .expo_subtitl{
+        font-size: 20px;
+        line-height: 28px;
+    }
 }
 @media only screen and (max-width:380px){
-    .expo_choice{
+    .expo_choice1{
     width: 140px;
     height: 140px;
 }
@@ -419,6 +422,10 @@ nav{
     .expo_datetxtc{
     font-size: 14px;
 }
+    .expo_subtitl{
+        font-size: 18px;
+        line-height: 26px;
+    }
 }
 @media only screen and (max-width:340px){
     .prev, .next{
@@ -438,18 +445,13 @@ nav{
     .expo_holdc{
         margin-bottom: 20px;
     }
-    .expo_subtitl{
-    text-align: center;
-        font-size: 22px;
-        line-height: 32px;
-}
     .expo_datetxtc{
     margin: 60px 20px 0px 0px;
 }
     .expo_datetxtd{
     margin: 0px 20px 40px 0px;
 }
-    .expo_choice{
+    .expo_choice1{
     width: 120px;
     height: 120px;
 }
@@ -464,7 +466,7 @@ nav{
         justify-content: center;
         -webkit-justify-content: center;
 }
-    .expo_choice{
+    .expo_choice1{
     margin: 0px 10px 0px 10px;
 }
     .expo_datetxtc{
