--- a/css/profl.css
+++ b/css/profl.css
@@ -11,7 +11,7 @@ nav{
 }
 .profl_sec{
     width: 100%;
-    margin-bottom: 130px;
+    margin-bottom: 8%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -157,7 +157,7 @@ nav{
     .profl_sec{
     box-sizing: border-box;
         padding: 0px 40px 0px 40px;
-        margin-bottom: 100px;
+        margin-bottom: 6%;
 }
     .profl_tplaygrnd1,.profl_tplaygrnd2{
         box-sizing: border-box;
