--- a/css/proj.css
+++ b/css/proj.css
@@ -849,11 +849,11 @@ mh{
 }
 @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
  .vid_wrap{
-    display: ;
+    display: none;
     }
 }
     @media only screen and (min-device-width: 481px) and (max-device-width: 1366px) and (orientation:landscape) {
   .vid_wrap{
-    display: ;
+    display: none;
     }
 }
