--- a/css/proj.css
+++ b/css/proj.css
@@ -850,10 +850,12 @@ mh{
 @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
  .vid_wrap{
     display: none;
+      display: -webkit-none;
     }
 }
     @media only screen and (min-device-width: 481px) and (max-device-width: 1366px) and (orientation:landscape) {
   .vid_wrap{
     display: none;
+      display: -webkit-none;
     }
 }
