--- a/css/home.css
+++ b/css/home.css
@@ -1702,11 +1702,13 @@ nav.scroll{
 }
 @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
  .vid_wrap{
-    display: ;
+    display: none;
+      display: -webkit-none;
     }
 }
     @media only screen and (min-device-width: 481px) and (max-device-width: 1366px) and (orientation:landscape) {
   .vid_wrap{
-    display: ;
+    display: none;
+      display: -webkit-none;
     }
 }
