--- a/css/agend.css
+++ b/css/agend.css
@@ -192,7 +192,7 @@ nav{
     #agendmain{
     width: 100%;
         box-sizing: border-box;
-        padding: 0px 40px 0px 40px;
+        padding: 0px 60px 0px 60px;
 }
     .age_stitl{
         margin-bottom: 60px;
@@ -235,6 +235,7 @@ nav{
 }
 @media only screen and (max-width: 700px){
     #agendmain{
+        margin-top: 180px;
         padding: 0px 0px 0px 0px;
 }
     .age_localh{
@@ -342,6 +343,7 @@ nav{
         width: 100%;
         box-sizing: border-box;
         padding: 0px 30px 0px 30px;
+    }
 }
 @media only screen and (max-width: 460px){
     .age_holda{
@@ -386,4 +388,24 @@ nav{
     .age_acttitl{
         font-size: 18px;
     }
+}
+@media only screen and (max-width: 340px){
+     #agendmain{
+        margin-top: 100px;
+        padding: 0px 0px 0px 0px;
+}
+}
+@media only screen and (max-height: 420px){
+    #agendmain{
+        margin-top: 100px;
+}
+}
+@media only screen and (max-height: 380px){
+    #agendmain{
+        padding: 0px 0px 0px 0px;
+}
+    .age_localv{
+        width: 100%;
+    height: 900px;
+}
 }
