--- a/css/sprojs.css
+++ b/css/sprojs.css
@@ -88,6 +88,8 @@ nav{
     display: -webkit-flex;
     -webkit-flex-direction: column;
     justify-content: center;
+    -webkit-justify-content: center;
+    
 }
 
 /* Next & previous buttons */
