--- a/css/sprojs.css
+++ b/css/sprojs.css
@@ -81,7 +81,7 @@ nav{
 .slideshow-container {
     width: 100%;
     position: relative;
-    margin-bottom: 40px;
+    margin-bottom: 12%;
     margin-top: 60px;
     display: flex;
     flex-direction: column;
