--- a/css/proj.css
+++ b/css/proj.css
@@ -244,8 +244,6 @@ mh{
     box-sizing: border-box;
     display: flex;
     display: -webkit-flex;
-    flex-wrap: wrap;
-    -webkit-flex-wrap: wrap;
 }
 .proj_tfence1, .proj_tfence3{
     flex-direction: row;
@@ -257,6 +255,8 @@ mh{
 }
 .proj_tfence3,.proj_tfence4{
     margin-bottom: 160px;
+      flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
 }
 .proj_tfence4{
     padding-right: 40px;
@@ -317,16 +317,20 @@ mh{
 .proj_tbox2c{
     margin-left: 660px;
    transform: translateY(-640px);
+    -webkit-transform: translateY(-640px);
 }
 .proj_tbox2c:hover{
    transform: scale(1.1, 1.1)translateY(-580px);
+-webkit-transform: scale(1.1, 1.1)translateY(-580px);
 }
 .proj_tbox2c:focus,.proj_tbox2c:active{
     transform: scale(0.9, 0.9)translateY(-710px);
+    -webkit-transform: scale(0.9, 0.9)translateY(-710px);
 }
 .proj_tbox2d{
     margin-left: -420px;
     margin-top: 100px;
+    margin-bottom: 20px;
 }
 .proj_tbox2e{
     margin-left: 220px;
@@ -334,9 +338,11 @@ mh{
 }
 .proj_tdsbox1:hover,.proj_tdsbox2:hover,.proj_tdsbox3:hover,.proj_tbox1a:hover,.proj_tbox1b:hover,.proj_tbox1c:hover,.proj_tbox1d:hover,.proj_tbox1e:hover,.proj_tbox1f:hover,.proj_tbox2a:hover,.proj_tbox2b:hover,.proj_tbox2d:hover,.proj_tbox2e:hover,.proj_tdbbox1:hover,.proj_tdbbox2:hover{
     transform: scale(1.1, 1.1);
+    -webkit-transform: scale(1.1, 1.1);
 }
 .proj_tdsbox1:focus,.proj_tdsbox1:active,.proj_tdsbox2:focus,.proj_tdsbox2:active,.proj_tdsbox3:focus,.proj_tdsbox3:active,.proj_tbox1a:active,.proj_tbox1a:focus,.proj_tbox1b:active,.proj_tbox1b:focus,.proj_tbox1c:active,.proj_tbox1c:focus,.proj_tbox1d:active,.proj_tbox1d:focus,.proj_tbox1e:active,.proj_tbox1e:focus,.proj_tbox1f:active,.proj_tbox1f:focus,.proj_tbox2a:active,.proj_tbox2a:focus,.proj_tbox2b:active,.proj_tbox2b:focus,.proj_tbox2d:active,.proj_tbox2d:focus,.proj_tbox2e:active,.proj_tbox2e:focus,.proj_tdbbox1:active,.proj_tdbbox1:focus,.proj_tdbbox2:active,.proj_tdbbox2:focus{
     transform: scale(0.9, 0.9);
+    -webkit-transform: scale(0.9, 0.9);
 }
 .proj_timg1,.proj_timg2,.proj_tbimg{
     background-position: center;
@@ -422,12 +428,15 @@ mh{
 .proj_tbox2c{
     margin-left: 460px;
     transform:translateY(-640px);
+    -webkit-transform:translateY(-640px);
 }
     .proj_tbox2c:hover{
    transform: scale(1.1, 1.1)translateY(-580px);
+        -webkit-transform: scale(1.1, 1.1)translateY(-580px);
 }
 .proj_tbox2c:focus,.proj_tbox2c:active{
     transform: scale(0.9, 0.9)translateY(-710px);
+    -webkit-transform: scale(0.9, 0.9)translateY(-710px);
 }
 .proj_tbox2d{
     margin-left: -20px;
@@ -519,12 +528,15 @@ mh{
 .proj_tbox2c{
     margin-left: 0px;
     transform:translateY(0px);
+    -webkit-transform:translateY(0px);
 }
     .proj_tbox2c:hover{
    transform: scale(1.1, 1.1)translateY(0px);
+        -webkit-transform: scale(1.1, 1.1)translateY(0px);
 }
 .proj_tbox2c:focus,.proj_tbox2c:active{
     transform: scale(0.9, 0.9)translateY(0px);
+    -webkit-transform: scale(0.9, 0.9)translateY(0px);
 }
 .proj_tbox2d{
     margin-left: 0px;
@@ -569,6 +581,7 @@ mh{
     display: -webkit-flex;
     flex-direction: row;
     -webkit-flex-direction: row;
+    -webkit-justify-content: space-around;
 }
    .ap2_hold{
     display: none;
@@ -695,6 +708,7 @@ mh{
     display: -webkit-flex;
     flex-direction: row;
     -webkit-flex-direction: row;
+    -webkit-justify-content: space-around;
 }
     
 .apv:hover .ap_minus,.apv:active .ap_minus,.apv:focus .ap_minus{
