--- a/css/home.css
+++ b/css/home.css
@@ -508,7 +508,7 @@ nav.scroll{
     margin:0px 0px 0px 300px ;
     height: 460px;
     width: 540px;
-    background-image: url(img/img4.jpg);
+    background-image: url(img/home_publi.jpg);
 }
 .hbuylink{
     font-weight: 600;
