--- a/css/proj.css
+++ b/css/proj.css
@@ -12,6 +12,26 @@
     height: 100%;
     width: 100%;
 }
+#head_wrap{
+    height: 100vh;
+    min-height: 600px;
+    width: 100%;
+    position:relative;
+    box-sizing: border-box;
+    background-color: rgb(30,30,30);
+    background-image: url(img/partimos_mobile_video.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    -webkit-justify-content: center;
+    -webkit-align-items: center;
+}
 #hprojshirt{
     height: 100vh;
     min-height: 600px;
