--- a/css/ageifrm.css
+++ b/css/ageifrm.css
@@ -136,6 +136,7 @@
     left: 0%;
     top: 0%;
     transform: translate(-0%,-0%);
+        text-shadow: 0px 0px 6px rgb(30,30,30);
     z-index: 5;
     position: absolute;
     -webkit-transition: font-weightr 0.2s ease;
@@ -146,7 +147,7 @@
 .ifrm_titl{
     left: 0%;
     top: 0%;
-    text-shadow: 0px 0px 10px rgb(30,30,30);
+    text-shadow: 0px 0px 6px rgb(30,30,30);
     font-size: 18px;
     line-height: 24px;
     transform: translate(-0%,-0%);
@@ -170,6 +171,11 @@
 }
 }
 @media only screen and (max-width: 300px){
+    .ifrm_pics{
+    width: 100%;
+    height:150px;
+    margin-bottom: 0px;
+}
     .ifrm_date{
     margin:20px 0px 0px 20px;
     font-size: 14px;
